    - bookworm/v8-wrappable.patch: add nvt2.patch build fix replacement
      that just defines a single struct member.
    - upstream/ninja.patch: add build fix for failure triggered by
      ninja-1.12 (closes: #1071197).
    - fixes/bad-font-gc00000.patch: add formatting patch to make other
      patches easier.
    - fixes/bad-font-gc*.patch: refresh.

  [ Timothy Pearson ]
  * d/patches/ppc64le:
    - third_party/0001-Add-PPC64-support-for-boringssl.patch: Modify for
      upstream changes
    - third_party/0002-Add-PPC64-generated-files-for-boringssl.patch: Add
      pregenerated configuration for ppc64el support in BoringSSL
    - third_party/0002-third-party-boringssl-add-generated-files.patch:
      Rename to third_party/0002-Add-PPC64-generated-files-for-boringssl.patch
    - workarounds/HACK-debian-clang-disable-skia-musttail.patch: Refresh
      for upstream changes
    - third_party/skia-vsx-instructions.patch: Refresh for upstream changes
    - ffmpeg/0001-Add-support-for-ppc64.patch: Refresh for upstream changes

 -- Andres Salomon <dilinger@debian.org>  Thu, 09 May 2024 20:37:07 -0400

chromium (124.0.6367.207-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-4761: Out of bounds write in V8. Reported by Anonymous.

 -- Andres Salomon <dilinger@debian.org>  Tue, 14 May 2024 22:17:42 -0400

chromium (124.0.6367.201-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-4671: Use after free in Visuals. Reported by Anonymous.

 -- Andres Salomon <dilinger@debian.org>  Thu, 09 May 2024 20:37:07 -0400

chromium (124.0.6367.155-1) unstable; urgency=high

  * New upstream security release.
    - CVE-2024-4558: Use after free in ANGLE. Reported by gelatin dessert.
    - CVE-2024-4559: Heap buffer overflow in WebAudio.
      Reported by Cassidy Kim(@cassidy6564).
  * d/control: replace libu2f-udev recommends with udev (closes: #1070283).

  [ Timothy Pearson ]
  * d/patches/ppc64le: